Three player functionality fully implemented